--- a/style/main.css
+++ b/style/main.css
@@ -2,10 +2,11 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-  margin: 0;
-  padding: 0;
   font-size: 62.5%;
+  font-family: 'Fira Sans Condensed', sans-serif;
 }
