--- a/style/main.css
+++ b/style/main.css
@@ -185,6 +185,90 @@ header {
   margin-top: 1.6rem;
 }
 
+/*  Section Where */
+
+#where .where-title {
+  font-size: 3rem;
+  text-align: center;
+  margin-top: 4rem;
+  color: #03490B;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+
+}
+
+.border {
+  border-bottom: #03490B solid 3px;
+  width: 20vw;
+  margin: 0 auto;
+  margin-bottom: 3rem;
+}
+
+#where .where {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+.where__info {
+  text-align: center;
+  margin: auto;
+}
+
+
+.where__info .where-description__city {
+  font-size: 2rem;
+  color: #477338;
+  margin-bottom: 2rem;
+  letter-spacing: 1px;
+}
+
+.where__info .where-description__city:active,
+.where__info .where-description__city:hover {
+  color: #03490B;
+}
+
+.where__info .where-description__phone {
+  font-size: 1.8rem;
+  color: #477338;
+  margin-bottom: 2rem;
+  font-weight: 600;
+}
+
+.where__info .where-description__phone:active,
+.where__info .where-description__phone:hover {
+  color: #03490B;
+}
+
+
+.where__info .where-description__mail {
+  color: #477338;
+  font-size: 1.8rem;
+  margin-top: 2rem;
+}
+
+.where__info .where-description__mail:active,
+.where__info .where-description__mail:hover {
+  color: #03490B;
+}
+
+.where-map {
+  margin: 3.6rem;
+}
+
+.where-map .where-map__title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 2rem;
+  color: #477338;
+  margin-bottom: 1rem;
+}
+
+.where-map img {
+  height: 30vh;
+  margin: 0 auto;
+}
+
 /*  Media */
 
 @media(max-width: 40rem) {
@@ -240,5 +324,22 @@ header {
 
   #products .product-items {
     flex-direction: column;
+  }
+
+  .where {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .where-title {
+    margin-bottom: 2rem;
+  }
+
+  .border {
+    display: none;
+  }
+
+  .where-map img {
+    width: 85vw;
   }
 }
